--- a/node-app/views/ideas/edit.handlebars
+++ b/node-app/views/ideas/edit.handlebars
@@ -12,7 +12,7 @@
       <input type="text" class="form-control" name="title" value="{{title}}">
     </div>
     <div class="form-group">
-      <label for="title">标题</label>
+      <label for="title">详情</label>
       <textarea name="details" class="form-control">{{details}}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">编辑</button>
