--- a/node-app/views/partials/_navbar.handlebars
+++ b/node-app/views/partials/_navbar.handlebars
@@ -14,7 +14,13 @@
           <a href="/about" class="nav-link">about</a>
         </li>
       </ul>
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="/users/login" class="nav-link">登录</a>
+        </li>
+        <li class="nav-item">
+          <a href="/users/register" class="nav-link">注册</a>
+        </li>
         <li class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle " data-toggle="dropdown" id="navbarDropdownMenuLink">想学的课程</a>
           <div class="dropdown-menu">
