--- a/node-app/views/ideas/edit.handlebars
+++ b/node-app/views/ideas/edit.handlebars
@@ -6,14 +6,15 @@
 {{/each}}
 <div class="card card-body">
   <h3>想学的课程</h3>
-  <form action="/ideas" method="POST">
+  <form action="/ideas/{{idea.id}}?_method=PUT" method="POST">
+    <input type="hidden" name="_method" value="PUT">
     <div class="form-group">
       <label for="title">标题</label>
-      <input type="text" class="form-control" name="title" value="{{title}}">
+      <input type="text" class="form-control" name="title" value="{{idea.title}}">
     </div>
     <div class="form-group">
       <label for="title">详情</label>
-      <textarea name="details" class="form-control">{{details}}</textarea>
+      <textarea name="details" class="form-control">{{idea.details}}</textarea>
     </div>
     <button type="submit" class="btn btn-primary">编辑</button>
   </form>
