--- a/node-app/views/users/register.handlebars
+++ b/node-app/views/users/register.handlebars
@@ -3,22 +3,22 @@
     <div class="card card-body">
       <img class="logo" src="/img/logo.png" alt="">
       <h3 class="text-center">注册</h3>
-      <form>
+      <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">用户名</label>
-          <input type="text" class="form-control" name="name" required>
+          <input type="text" value="{{name}}" class="form-control" name="name" required>
         </div>
         <div class="form-group">
           <label for="email">邮箱</label>
-          <input type="email" name="email" class="form-control" required>
+          <input type="email" value="{{email}}" name="email" class="form-control" required>
         </div>
         <div class="form-group">
           <label for="password">密码</label>
-          <input type="password" name="password" class="form-control" required>
+          <input type="password" value="{{password}}" name="password" class="form-control" required>
         </div>
         <div class="form-group">
           <label for="password2">确认密码</label>
-          <input type="password" name="password2" class="form-control" required>
+          <input type="password" value="{{password2}}" name="password2" class="form-control" required>
         </div>
         <button type="submit" class="btn btn-primary">注册</button>
       </form>
